* BUG: Login page displayed the wrong login message.
* BUG: Do not allow user names that vary only by case ("user" vs. "uSer").
* BUG: Fix issue with browsers that encode URL as UTF-8 instead of ISO-8859-1.
* BUG: Remove extra "/" that could sometimes appear in image URLs.
* BUG: Fix topic undeletion when in file persistency mode.
* FEATURE: Uploading a second version of an image should add a record to the
  recent changes.
* FEATURE: Updates made using Special:Translation will now add a record to
  the recent changes page and save a version of the translated file.
* FEATURE: Danish translations from Anders Monrad (g9adm).
* FEATURE: Updated German translations from Axel Kramer (axelclk).
* FEATURE: Updated Hungarian translations from bDaneE.

0.3.0
=====

* FEATURE: Add support for Mediawiki categories.
* FEATURE: Add Special:Categories.
* FEATURE: Add Special:Manage, remove Special:Delete.
* FEATURE: Add support for undeleting a topic.
* FEATURE: Drop jam_image table - unused.
* BUG: Possible null pointer exception in file persistency mode, pointed
  out by User:garem.
* BUG: Image uploads in file persistency mode set wrong path.
* BUG: Fix possible PageInfo corruption.  Pointed out by Scott Crocco.
* BUG: Upgrade to javadiff 1.0.5 to fix several diff issues.
* BUG: Parser was not parsing links of the form [[#Section]] properly.
* BUG: Parser was not parsing links with parentheses (such as
  [[Ajax (programming)]]) properly.
* BUG: Some file input/output streams not properly closed when in file
  persistency mode.
* BUG: Database upgrade rollback could fail.
* BUG: Software version could be updated even if upgrade unsuccessful.
* BUG: Topic names beginning with "Special:" should not be allowed, but
  topic names containing apostrophes should be allowed.
* FEATURE: Major parser architecture updates.  Parser should be slightly
  faster when parsing edits.
* FEATURE: Fix reloading of recent changes in ANSI database mode.